apps/frontend/deploy/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: otel-lab
  labels:
    app: frontend
    app.kubernetes.io/name: frontend
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: otel-tracing-lab
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
